--- a/src/FrontEnd/AdminMenu.form
+++ b/src/FrontEnd/AdminMenu.form
@@ -116,6 +116,9 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="Lawsuit">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\script.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Processos"/>
           </Properties>
           <Events>
@@ -124,6 +127,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="Consult1">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\script_add.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Criar Processo"/>
               </Properties>
               <Events>
@@ -132,6 +138,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="Consult">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\script_code.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Consultar Processos"/>
               </Properties>
               <Events>
@@ -140,6 +149,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="Consult2">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\script_link.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Visualizar Processos Aquivados"/>
               </Properties>
               <Events>
@@ -148,6 +160,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem9">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\script_edit.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Adicionar Entidade Interveniente"/>
               </Properties>
               <Events>
@@ -158,11 +173,17 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="online_data">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Processar dados Online"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table_add.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Adicionar An&#xfa;ncio de venda"/>
               </Properties>
               <Events>
@@ -171,6 +192,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table_delete.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Eliminar An&#xfa;ncio de venda"/>
               </Properties>
               <Events>
@@ -179,11 +203,17 @@
             </MenuItem>
             <Menu class="javax.swing.JMenu" name="jMenu3">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table_edit.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Editar informa&#xe7;&#xe3;o"/>
               </Properties>
               <SubComponents>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItem5">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table_refresh.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Informa&#xe7;&#xe3;o da empresa"/>
                   </Properties>
                   <Events>
@@ -192,6 +222,9 @@
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItem7">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table_lightning.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Links de website"/>
                   </Properties>
                   <Events>
@@ -202,6 +235,9 @@
             </Menu>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem8">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table_relationship.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Propostas de compras"/>
               </Properties>
               <Events>
@@ -210,6 +246,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem10">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\table_row_insert.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Carregar documento"/>
               </Properties>
               <Events>
@@ -220,6 +259,9 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu7">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\user.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Gerir Utilizadores"/>
           </Properties>
           <Events>
@@ -228,6 +270,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="Create">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\user_add.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Criar Utilizador"/>
               </Properties>
               <Events>
@@ -236,6 +281,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="Create1">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\user_edit.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Editar Permiss&#xf5;es"/>
               </Properties>
               <Events>
@@ -244,6 +292,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="Create2">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\user_comment.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Hist&#xf3;rico de Utilizadores"/>
               </Properties>
               <Events>
@@ -254,7 +305,10 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Log out"/>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\F&#xe1;bio\Documents\NetBeansProjects\Prototipo\icones\bullet_red.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Terminar Sess&#xe3;o"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu2ActionPerformed"/>
@@ -284,7 +338,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-85,0,0,2,14"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,72,0,0,3,9"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -306,13 +360,13 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="526" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="777" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabel1" alignment="1" pref="406" max="32767" attributes="0"/>
+              <Component id="jLabel1" alignment="1" pref="563" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
